# python-samples

./: .gitignore  .pylintrc  .travis.yml  CONTRIBUTING.md  LICENSE  Pipfile  README.md  client_secrets.json  document.txt  install.sh  main.py  pyproject.toml  requirements.txt  test.sh
.github/: ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/scripts/: authorize.sh  lint.sh  test.sh
.github/workflows/: ci.yaml  lint.yaml  lint.yml  test.yml
admin_sdk/directory/: README.md  quickstart.py  requirements.txt
admin_sdk/groups_migration/: README.md  quickstart.py
admin_sdk/groups_settings/: README.md  detect_external_access.py  quickstart.py  restrict_external_access.py
admin_sdk/licensing/: README.md  quickstart.py
admin_sdk/reports/: README.md  quickstart.py  requirements.txt
admin_sdk/reseller/: README.md  quickstart.py  requirements.txt
apps_script/execute/: execute.py
apps_script/quickstart/: README.md  quickstart.py  requirements.txt
calendar/add_event/: quick_add.py
calendar/quickstart/: README.md  quickstart.py  requirements.txt
chat/quickstart/: README.md  quickstart.py  requirements.txt
classroom/oauth/: README.md  createCourses.py
classroom/quickstart/: README.md  quickstart.py  requirements.txt
classroom/snippets/: base_test.py  classroom_add_alias_existing.py  (+30 more)
drive/: gdrive_api_tutorial.ipynb
meet/: README.md
solutions/enterprise-ai-agent/: README.md  pyproject.toml
solutions/enterprise-ai-agent/enterprise-ai/: __init__.py
solutions/enterprise-ai-agent/enterprise_ai/: agent.py  requirements.txt
(+364 files in other folders)
